# manxo

./: .gitignore  .gitmodules  .windsurfrules  Max-Claude-概要.md  README.md  README_DATABASE_ACCESS.md  build_libwebsockets_universal.sh  create_issues.md  jest.config.js  max-package.json  mcp_summary.md  next_steps.md  package-lock.json  package.json  pythonナレッジ.txt  run_tests.sh  setup.js  update_github.sh  upload_issues.py
.github/workflows/: mcp_integration_tests.yml  osc_bridge_tests.yml
archives/: max-package.json  run_tests.sh
archives/libwebsockets/: build_universal.sh
archives/libwebsockets/build_x86_64/: CPackConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  libwebsockets-config-version.cmake  libwebsockets-config.cmake  libwebsockets-test-server.key.pem  libwebsockets.pc  libwebsockets_static.pc  lws_config.h
archives/libwebsockets_universal/include/: lws_config.h
archives/max-osc-bridge/: INSTALL.md  README.md  max-simple-bridge.js  simple-bridge.maxpat  sql_knowledge_bridge.maxpat  use-osc-bridge.maxpat
archives/min-devkit/orchestrator/: mcp.orchestrator.cpp
archives/min-devkit/osc_bridge/: CMakeLists.txt  max_wrapper.hpp  mcp.osc_bridge.cpp  mcp.osc_client.hpp  mcp.security_policy.hpp  mcp.websocket_mcp_handler.hpp  mcp.websocket_server.hpp
archives/min-devkit/state_sync/: mcp.state_model.hpp  mcp.state_sync.cpp  (+1 more)
archives/oscpack/: build_universal.sh
docs/: API_Intent_Mapping.csv  Claude_Desktop_Max9開発状況.md  Claude_Max_MCP調査.md  ConnectionPatterns.csv  ConnectionPatterns_Final.csv  Different_MCP調査.md  Max9_nodescript_v8ui_比較.md  Max9_v8ui_Survey.txt  Max9_v8ui_概要.md  Max9_内部実装解析.md  MaxObjects.csv  Max_MSP_JavaScript_Guide.txt  Min-DevKit_API.csv  Potential_Barriers.txt  ValidationRules.csv  api_mapping.csv  connection_patterns.csv  cross_platform_analysis.md  handover_sql_knowledge_base.md  handover_sql_knowledge_base_queries.md  implementation_status.md  issue13_osc_migration_plan.md  issue21_implementation_plan.md  issue21_summary.md  issue21_to_issue22_handover.md  issue22_to_issue23_handover.md  issue4_implementation.md  m4l_advanced_implementation_guide.md  max_objects.csv  mcp_authentication_analysis.md  mcp_implementation_references.txt  min_devkit_api.csv  min_devkit_knowledge.md  min_devkit_license_info.md  next_steps_osc_bridge.md  osc_analysis.md  osc_bridge_test_criteria.md  osc_bridge_testing_guide.md  project_current_state.md  requirements_min_devkit.md  (+4 more)
docs/design/: architecture_min_devkit_v8ui_node.md  project_current_state.md
docs/development/: build_instructions.md  development_roadmap.md  directory_structure.md
docs/issues/: issue_001_min_devkit_claude_integration.md  issue_002_project_restructuring.md  issue_003_websocket_client_simplification.md  issue_004_mcp_tools_implementation.md  issue_005_cross_platform.md  issue_007_security.md  issue_009_performance.md  issue_010a_database_design.md  issue_010b_data_collection.md  issue_010b_implementation_summary.md  issue_010c_implementation_summary.md  issue_010c_query_engine.md  issue_010d-3_architecture_simplification.md  issue_010d-4_direct_cpp_sql_access.md  issue_010d_implementation_memo.md  issue_010d_validation_engine.md  issue_010e_claude_integration.md  issue_01_project_restructuring.md  issue_03_websocket_client_simplification.md
docs/overview/: v8ui_overview.md
docs/planning/: cleanup_plan.md  required_document_list.md  unresolved_questions.md
docs/requirements/: mcp_simplification.md
docs/specifications/: osc_bridge_technical_specification.md  requirements_min_devkit.md
issues/: issue_27_websocket_support.md  issue_28_llm_connector.md  issue_29_websocket_security.md  issue_30_performance_optimization.md  issue_31_advanced_routing.md  min_devkit_migration_plan.md
libwebsockets/build_x86_64/: CMakeCache.txt  CPackSourceConfig.cmake  DartConfiguration.tcl  LibwebsocketsTargets.cmake  libwebsockets-test-server.pem
libwebsockets_universal/lib/: libwebsockets.19.dylib
scripts/: update_issues.sh  upload_new_issues.py
src/: index.js  setup-claude-config.js
src/max-bridge/: README.md
src/max-osc-bridge/: error_state_manager.js  mcp_osc_bridge.js  mcp_osc_bridge.maxpat  parameter_sync.js  protocol_handler.js
src/maxpat_generator/: ai-generator.js  index.js  mcp-tool.js
src/mcp-server/: README.md  index.js  package.json
src/mcp_connector/: README.md  document-client.js  graph-client.js  index.js  maxpat_patterns_service.js  vector-client.js
src/min-devkit/osc_bridge/: CMakeLists.txt  CMakeLists.txt.bak  error_recovery_test.cpp  extended_types_test.cpp  llm.mcp.cpp  m4l_lifecycle_test.cpp  mcp.osc_bridge.cpp  mcp.osc_bridge_test.cpp  mcp.osc_claude_handler.hpp  mcp.osc_client.cpp  mcp.osc_server.cpp  mcp.osc_server.hpp  mcp.osc_types.hpp  mcp.websocket_client.hpp  mcp.websocket_mcp_handler.hpp  multi_instance_test.cpp  new_test_snippet.cpp  osc_bridge.cpp  osc_message_handler.hpp  performance_test.cpp  verify_architecture.sh
src/min-devkit/osc_bridge/m4l-patches/: m4l_lifecycle_test.maxpat
src/min-devkit/osc_bridge/tests/: CMakeLists.txt  catch_main.cpp  error_recovery_test_new.cpp  extended_types_test.cpp  extended_types_test_new.cpp  m4l_lifecycle_test_new.cpp  multi_instance_test.cpp  multi_instance_test_new.cpp  new_test_snippet.cpp  performance_test.cpp  performance_test_new.cpp  run_standalone_tests.sh  standalone_test.cpp  test_server.py
src/min-devkit/osc_bridge/tests/max_patches/: osc_bridge_websocket_test.maxpat
src/min-devkit/osc_bridge/tests/mocks/: osc_interface.hpp  osc_mock.hpp  test_utilities.hpp
src/protocol/: CONTINUOUS_DEVELOPMENT.md  ERROR_CODES.md  README.md  STATE_SYNC.md
src/sql_knowledge_base/: README.md  create_database.sql  fix_maxobjects_csv.py  import_data.py  integration.js  max-db-server.js  max_claude_kb.db  max_claude_kb.db-shm  max_claude_kb.db-wal  max_claude_kb_dump.sql  max_knowledge.sqlite  mcp-server.js  package-lock.json  package.json  server.js  vector-db.js
tests/: setup.js
tests/llm_connector/: llm_connector_test.maxpat  llm_mock_server.py
tests/unit/: sample.test.js
(+100 files in other folders)
